# RAG

./: app.py  pyproject.toml  render.yaml  requirements.txt  setup_voice.sh  test_rag.py  voice.py
src/: data_loader.py  embedding.py  search.py  vectorstore.py
templates/: index.html
